# BayesianStatistics

./: PyMC.ipynb  pyproject.toml
