[tool.poetry]
name = "bayesianstatistics"
version = "0.1.0"
description = ""
authors = ["Ulrik Pedersen <ulriktpedersen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.5"
pandas = "^2.1.0"
pymc = "^5.8.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
